manifests/production/idp/gateway.networking.k8s.io_v1_gateway_keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
    cert-manager.io/cluster-issuer: letsencrypt
  name: keycloak
  namespace: keycloak
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: auth.seigra.net
    name: keycloak
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: keycloak-gateway-tls
      mode: Terminate
